--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-native": "0.68.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
-    "uuidv4": "^6.2.13"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
